# simulator

./: .gitignore  CMakeLists.txt  README.md  compile-elf.sh  install_third_party.sh  mmu_riscv_test.sh  test_runner.sh
instructions_map/: CMakeLists.txt  README.md  generate_insts.erb  process_instrs.rb  riscv_instructions.yaml
loader/: CMakeLists.txt  README.md  loader.cpp  loader.h  test.cpp  vm_area_struct.h
machine/: CMakeLists.txt  README.md  entry.h  hart.cpp  hart.h  machine.cpp  machine.h  main.cpp  mem.cpp  mem.h  timers.h  to-do.md
machine/cache/: intBitCache.h
main/: main.cpp
plugins/: 1.cpp
simulator/: simulator.cpp  simulator.h
test/: 1.dump  1.elf  1.s  2.s  3.s  4.s  5.s  6.s  8-q-new.c  8-queens  8-queens.c  8_q  mmu.cpp  mmu_page_fault.cpp  test_timers.s
test/logs/: log  log-8-simple  log-another-asm.txt  log_8_queens.txt  queens
test/other_tests/: 5_longer.s  8-q.s  8-queens-simple.s  8-queens.s
test/test_answers/: 1  2  3  4  5  6
timers_interrupts/: csr.h
tools/: logging.cpp  logging.h
